--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcc 'BS'
 - !lcsh 'Bible -- Juvenile literature'
 - !lcsh 'Elijah -- (Biblical prophet) -- Juvenile literature'
+- GITenberg
 title: 'The Man Who Did Not Die: The Story of Elijah'
 url: http://www.gutenberg.org/ebooks/30899
